--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
     "react-native-size-matters": "^0.4.2",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-tts": "^4.1.1",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-version-check": "^3.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
